# ASU_PGR_doc_html

./: .env.example  .gitignore  DEPLOYMENT_FIXES.md  README.md  SEARCH_IMPROVEMENTS.md  TODO_RAG_IMPROVEMENTS.md  TODO_RAG_IMPROVEMENTS_!.md  acc.txt  admin.html  admin_NEW!!!.html  admin_git.html  check_chunks.py  context_full.txt  context_log.txt  data.json  data_копия.json  docker-compose.rag.yml  rebuild.py  test_search.py  Наши идеи.md  ПОРЯДОК_ЗАПОЛНЕНИЯ_СПРАВОЧНИКОВ.md  правил.txt
components/analytics-service-dev/: Makefile  pyproject.toml
components/analytics-service-dev/analytics-service-dev/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml
components/analytics-service-dev/analytics-service-dev/setup/: setup_minio.sh  setup_rabbitmq.sh
components/analytics-service-dev/clickhouse_migrations/: 000002_gps_data.up.sql  000003_vehicle_telemetry_mv.down.sql  000003_vehicle_telemetry_mv.up.sql  000004_cycle_tag_history.down.sql  000004_cycle_tag_history.up.sql
components/analytics-service-dev/src/: __main__.py
components/analytics-service-dev/src/app/: broker_factory.py  fastapi_factory.py
components/analytics-service-dev/src/background/: __init__.py  s3_clickhouse_etl.py
components/analytics-service-dev/src/core/: config.py
components/api-gateway-dev/: Dockerfile  Makefile  config.yaml  mypy.ini  pyproject.toml
components/api-gateway-dev/api-gateway-dev/: Dockerfile  README.md
components/api-gateway-dev/api-gateway-dev/src/: app.py  config.py  proxy.py
components/api-gateway-dev/api-gateway-dev/tests/: test_config.py  test_proxy_path_pattern.py  test_root_endpoint.py  test_upstream_headers.py
components/api-gateway-dev/src/: __main__.py  app.py  logging_setup.py  middleware.py
components/api-gateway-dev/tests/: test_version_routing_and_logging.py
components/audit-dev/audit-dev/: .gitignore  README.md  pyproject.toml
components/audit-dev/audit-dev/audit_lib/: config.py  ids.py  models.py
components/audit-dev/audit-dev/examples/: alembic_migration.py  fastapi_app.py
components/audit-dev/audit-dev/tests/: test_context.py  test_custom_serializer.py  test_daemon_api.py  test_daemon_reader.py  test_daemon_serialization.py  test_integration.py  test_mixin.py  test_models.py  test_table.py
components/audit-exporter-dev/: .example.env  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  pytest.ini
components/audit-exporter-dev/audit-exporter-dev/: .gitignore  .gitlab-ci.yml  README.md
components/audit-exporter-dev/audit-exporter-dev/migrations/: 000001_create_audit_events.up.sql
components/audit-exporter-dev/audit-exporter-dev/src/: __init__.py
components/audit-exporter-dev/migrations/: 000001_create_audit_events.down.sql
components/audit-exporter-dev/scripts/: migrate.sh  start.sh
components/audit-exporter-dev/src/: main.py
components/audit-exporter-dev/src/app/: __init__.py
components/audit-exporter-dev/src/clickhouse/: __init__.py  client.py
components/audit-exporter-dev/src/core/: __init__.py  orchestrator.py  pipeline.py  state.py
components/audit-exporter-dev/src/db/: __init__.py
components/audit-exporter-dev/tests/: conftest.py
components/audit-exporter-dev/tests/integration/: conftest.py
components/auth-lib-dev/: .gitlab-ci.yml  README.md  pyproject.toml
components/auth-lib-dev/auth-lib-dev/auth_lib/: __init__.py  dependencies.py  permissions.py  schemas.py  token.py
components/auth-lib-dev/auth-lib-dev/tests/: test_dependencies.py  test_schemas.py  test_token.py
components/auth-lib-dev/auth_lib/: exceptions.py
components/auth-lib-dev/tests/: conftest.py  test_permissions.py
components/cdc-bort-applier-dev/cdc-bort-applier-dev/: .env.example  .gitlab-ci.yml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
components/cdc-distributor-dev/cdc-distributor-dev/: .dockerignore  .gitlab-ci.yml  pyproject.toml
components/cdc-distributor-dev/cdc-distributor-dev/src/: __main__.py
components/dispa-backend-dev/: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  init_schema.sql  mypy.ini  pyproject.toml  start.broker.sh  start.sh
components/dispa-backend-dev/dispa-backend-dev/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
components/dispa-backend-dev/dispa-backend-dev/tests/: factories.py
components/dispa-backend-dev/src/: simulate_trip.py
components/dispa-backend-dev/src/app/: factory.py  main.py
components/dispa-backend-dev/src/migrations/: env.py  script.py.mako
components/dispa-backend-dev/tests/: mocks.py  run_tests.sh
components/dump-service-dev/dump-service-dev/: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.MD  mypy.ini  pyproject.toml
components/dump-service-dev/dump-service-dev/src/: __main__.py
components/enterprise-service-dev/enterprise-service-dev/: .env.example  Dockerfile  README.md  pyproject.toml
components/graph-service-backend-dev/: .dockerignore  Dockerfile  Makefile  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
components/graph-service-backend-dev/graph-service-backend-dev/: .example.env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
components/graph-service-backend-dev/graph-service-backend-dev/src/: init_db.py  main.py
components/graph-service-backend-dev/src/: main.py
components/graph-service-backend-dev/src/config/: settings.py
components/graph-service-backend-dev/src/migrations/: env.py
components/graph-service-backend-dev/tests/: __init__.py
components/platform-sdk-dev/: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
components/platform-sdk-dev/platform_sdk/: __init__.py  _base_client.py  _clients.py  _exceptions.py  _settings.py  _transport.py
components/sync-service-dev/: .gitignore  Dockerfile  compose.srv.yml  compose.yml  entrypoint.sh  pyproject.toml
components/sync-service-dev/app/: dependencies.py  main.py  settings.py
components/sync-service-dev/sync-service-dev/: Dockerfile  compose.b9.yml
(+2860 files in other folders)
