[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platform-sdk"
version = "0.2.0"
description = "Typed async Python SDK for internal UGMK platform HTTP services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.0",
    "ruff>=0.11.13,<=0.12.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.8",
    "testcontainers>=4.13.3",
    "pytest-dotenv>=0.5.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "respx==0.23.0"
]


[tool.hatch.build.targets.sdist]
exclude = [".venv", "dist", "*.egg-info"]

[tool.hatch.build.targets.wheel]
packages = ["platform_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]




[tool.ruff]
line-length = 120
force-exclude = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # isort
    "I",
    # tidy imports
    "TID",
    # flake8-bugbear
    "B",
    # flake8-bandit
    "S",
    # pydocstyle
    "D",
    # pyugrade
    "UP"
]
ignore = ["D104", "D107", "B008", "E721"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "D100", "D101", "D102", "D103", "F403", "D106"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
