[project]
name = "audit-lib"
version = "0.0.0"
description = "SQLAlchemy audit logging outbox library"
readme = "README.md"
authors = [
    { name = "r.kamaliev", email = "r.kamaliev@nir.center" }
]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
daemon = ["rstream>=0.22"]
fastapi = ["starlette>=0.27"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "sqlalchemy[asyncio]",
    "psycopg2-binary",
    "asyncpg",
    "httpx",
    "fastapi",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audit_lib"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires external services (PostgreSQL, RabbitMQ)",
]
