[project]
name = "cdc-bort-applier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.1",
    "asyncpg>=0.31.0",
    "fast-depends>=3.0.5",
    "loguru>=0.7.3",
    "msgspec>=0.18.6",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.0",
    "ruff>=0.11.13,<=0.12.0"
]
