[project]
name = "cdc-distributor"
version = "0.1.0"
description = "CDC event distributor — fan-out relay to onboard systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.1",
    "alembic>=1.15.0",
    "asyncpg>=0.31.0",
    "loguru>=0.7.3",
    "msgspec>=0.18.6",
    "pydantic-settings>=2.0.0",
    "rstream>=0.40.1",
    "sqlalchemy>=2.0.0",
]

[tool.ruff]
line-length = 100
extend-exclude = [
    "src/migrations",
]
force-exclude = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # isort
    "I",
    # tidy imports
    "TID",
    # flake8-bugbear
    "B",
    # flake8-bandit
    "S",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
]
ignore = ["D104", "D107", "B008", "E721"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "D100", "D101", "D102", "D103", "F403", "D106"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.0",
    "ruff>=0.11.13,<=0.12.0",
]
