[project]
name = "enterprise-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.14.1",
    "asyncpg==0.31.0",
    "audit-lib[daemon,fastapi]>=0.1.0a1",
    "auth-lib>=0.1.0a1",
    "fastapi==0.115.8",
    "gmqtt==0.6.16",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "python-dotenv==1.1.0",
    "redis==5.2.1",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]

[[tool.uv.index]]
name = "nexus"
url = "https://nexus.dmi-msk.ru/repository/pypi-dev-group/simple"

[tool.ruff]
line-length = 100
extend-exclude = [
    "src/migrations",
]
force-exclude = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # isort
    "I",
    # tidy imports
    "TID",
    # flake8-bugbear
    "B",
    # flake8-bandit
    "S",
    # pydocstyle
    "D",
    # pyugrade
    "UP"
]
ignore = ["D104", "D107", "B008", "E721"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "D100", "D101", "D102", "D103", "F403", "D106"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
